Correcion de data

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -5,7 +5,7 @@
     "skilleng": "Language Skills",
     "skilfra": "Skill in framework and library and tools",
     "workt": "Work experience and projects developed",
-    "edugt": "Educacion"
+    "edugt": "Education"
   },
   "info": {
     "name": "Rafael Hidalgo",
