--- a/src/assets/lang/es.json
+++ b/src/assets/lang/es.json
@@ -5,7 +5,7 @@
     "skilleng": "Habilidad en lenguajes",
     "skilfra": "Habilidad en framework e librería y herramientas",
     "workt": "Experiencia laboral y proyectos elaborados",
-    "edugt": "Education"
+    "edugt": "Educacion"
   },
   "info": {
     "name": "Rafael Hidalgo",
