Correcion de palabra

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -21,7 +21,7 @@
         "work": "Electronic billing project in Energuate Guatemala",
         "emp": "at the data age",
         "time": "August, 2019 - December, 2019",
-        "descrip": "Coordination of developments in the electronic certification system or FEL for Energuate in charge of creating the demon that communicates with Sap of Guatemala to sign the invoices of the commercial system"
+        "descrip": "Coordination of developments in the electronic certification system or FEL for Energuate in charge of creating the demon that communicates with SAT of Guatemala to sign the invoices of the commercial system"
       },
       {
         "work": "Electronic billing project in Salvador AES",
