--- a/src/assets/lang/es.json
+++ b/src/assets/lang/es.json
@@ -21,7 +21,7 @@
         "work": "Proyecto de Facturacion electronica en Energuate Guatemala",
         "emp": "a the data age",
         "time": "Agosto,2019 - Diciembre,2019",
-        "descrip": " Coordinación de desarrollos en el sistema de certificacion electronica o FEL para Energuate encargado de crear el demonio que se comunica con Sap de guatemala para firma las facturas del sistema comercial"
+        "descrip": " Coordinación de desarrollos en el sistema de certificacion electronica o FEL para Energuate encargado de crear el demonio que se comunica con SAT de guatemala para firma las facturas del sistema comercial"
       },
       {
         "work": "Proyecto de Facturacion electronica en Salvador AES",
