[add] update ort

--- a/src/assets/lang/es.json
+++ b/src/assets/lang/es.json
@@ -206,6 +206,6 @@
         "link": "https://www.linkedin.com/in/rafael-antonio-hidalgo-romero-71608a116/"
       }
     ],
-    "aboutme": "Hola soy Rafael soy un apasionado al desarrollo backend y frontend, \nSoy experto en libreria para servicio rest api e me gusta el desarrollo frontend en React"
+    "aboutme": "Hola soy Rafael soy un apasionado al desarrollo backend y frontend, \nSoy experto en libreria para servicio rest api y me gusta el desarrollo frontend en React"
   }
 }
