--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -9,10 +9,16 @@
   },
   "info": {
     "name": "Rafael Antonio Hidalgo Romero",
-    "post": "Full stack developer",
+    "post": "Full stack developer with 6 years of experience in large-scale development.",
     "workitems": [
       {
         "work": "Backend Developer",
+        "emp": "en Zerviz (Chile)",
+        "time": "at March,2021 - Present",
+        "descrip": "Desarrollador Backend en typescript con nodejs en el framework nestJS con tecnologias AWS sobre microservicios."
+      },
+      {
+        "work": "Backend Developer(NodeJS)",
         "emp": "at ZeroQ (Chile)",
         "time": "September, 2021 - Present",
         "descrip": "Backend developer in go and node js with specialization in web socket systems for customer service."
@@ -71,7 +77,7 @@
     "aboutmeitems": [
       {
         "title": "Age",
-        "val": "25"
+        "val": "26"
       },
       {
         "title": "Email",
@@ -93,11 +99,19 @@
     "lib_skills": [
       {
         "title": "React(JS)",
-        "val": 70
+        "val": 60
+      },
+      {
+        "title": "NodeJS",
+        "val": 80
+      },
+      {
+        "title": "NestJS",
+        "val": 80
       },
       {
         "title": "Grahql(JS,GO)",
-        "val": 50
+        "val": 40
       },
       {
         "title": "Boostrap(Css)",
@@ -105,7 +119,7 @@
       },
       {
         "title": "NodeJS(JS)",
-        "val": 80
+        "val": 90
       },
       {
         "title": "GORM(GO)",
@@ -117,7 +131,7 @@
       },
       {
         "title": "Asp .net MVC(C#)",
-        "val": 70
+        "val": 60
       },
       {
         "title": "Git",
@@ -150,12 +164,16 @@
         "val": 90
       },
       {
+        "title": "Typescript",
+        "val": 90
+      },
+      {
         "title": "Golang",
         "val": 100
       },
       {
         "title": "C#",
-        "val": 70
+        "val": 60
       },
       {
         "title": "COBOL",
@@ -183,7 +201,7 @@
       },
       {
         "title": "Kotlin",
-        "val": 60
+        "val": 50
       },
       {
         "title": "Dart",
@@ -191,7 +209,7 @@
       },
       {
         "title": "Visual Basic",
-        "val": 60
+        "val": 50
       }
     ],
     "social": [
