[add] implement dynamic age calculation in About section

--- a/src/assets/lang/es.json
+++ b/src/assets/lang/es.json
@@ -77,7 +77,7 @@
     "aboutmeitems": [
       {
         "title": "Edad",
-        "val": "26"
+        "val": "DYNAMIC_AGE"
       },
       {
         "title": "Correo",
