--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -77,7 +77,7 @@
     "aboutmeitems": [
       {
         "title": "Age",
-        "val": "26"
+        "val": "DYNAMIC_AGE"
       },
       {
         "title": "Email",
